<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
    <ScrollView android:id="@+id/scrollView1" android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:id="@+id/linearLayout3" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">
            <TextView android:id="@+id/lab1" android:layout_width="wrap_content" android:text="@string/lab1" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content"></TextView>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <EditText android:layout_weight="1" android:layout_width="wrap_content" android:id="@+id/fl" android:layout_height="wrap_content">
                    <requestFocus></requestFocus>
                </EditText>
                <TextView android:layout_weight="0.19" android:id="@+id/lab2" android:layout_width="wrap_content" android:gravity="center_horizontal" android:text="@string/unit1" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content"></TextView>
            </LinearLayout>
            <TextView android:id="@+id/textView4" android:layout_width="wrap_content" android:text="@string/lab2" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content"></TextView>
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout1">
                <EditText android:layout_weight="1" android:layout_width="wrap_content" android:id="@+id/isw" android:layout_height="wrap_content"></EditText>
                <TextView android:layout_weight="0.19" android:id="@+id/lab3" android:layout_width="wrap_content" android:gravity="center_horizontal" android:text="@string/unit1" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content"></TextView>
            </LinearLayout>
            <TextView android:id="@+id/textView5" android:layout_width="wrap_content" android:text="@string/lab3" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content"></TextView>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <EditText android:layout_weight="1" android:layout_width="wrap_content" android:id="@+id/iw" android:layout_height="wrap_content"></EditText>
                <Button android:layout_weight="0.14" android:layout_width="wrap_content" android:text="@string/unit2" android:id="@+id/unit" android:layout_height="wrap_content"></Button>
            </LinearLayout>
            <ImageView android:src="@android:drawable/arrow_down_float" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:id="@+id/arrow1"></ImageView>
            <Button android:layout_width="match_parent" android:text="@string/compute" android:id="@+id/compute" android:layout_height="wrap_content"></Button>
            <ImageView android:src="@android:drawable/arrow_down_float" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:id="@+id/arrow2"></ImageView>
            <TextView android:id="@+id/lab5" android:layout_width="wrap_content" android:text="@string/lab5" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content"></TextView>
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout2">
                <EditText android:layout_weight="1" android:layout_width="wrap_content" android:id="@+id/hfov" android:layout_height="wrap_content"></EditText>
                <TextView android:layout_weight="0.16" android:id="@+id/lab6" android:layout_width="wrap_content" android:gravity="center_horizontal" android:text="@string/unit4" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content"></TextView>
            </LinearLayout>
            <TextView android:id="@+id/lab4" android:layout_width="wrap_content" android:text="@string/lab4" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content"></TextView>
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout2">
                <EditText android:layout_weight="1" android:layout_width="wrap_content" android:id="@+id/vdf" android:layout_height="wrap_content"></EditText>
                <TextView android:layout_weight="0.25" android:id="@+id/lab6" android:layout_width="wrap_content" android:gravity="center_horizontal" android:text="@string/unit3" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content"></TextView>
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout2">
                <EditText android:layout_weight="1" android:layout_width="wrap_content" android:id="@+id/vdm" android:layout_height="wrap_content"></EditText>
                <TextView android:layout_weight="0.20" android:id="@+id/lab7" android:layout_width="wrap_content" android:gravity="center_horizontal" android:text="@string/unit2" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content"></TextView>
            </LinearLayout>
        </LinearLayout>
        
    </ScrollView>
	<TextView android:id="@+id/lab1" android:layout_width="wrap_content"
		android:text="@string/lab1" android:textAppearance="?android:attr/textAppearanceLarge"
		android:layout_height="wrap_content"></TextView>

	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<EditText android:id="@+id/fl" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_weight="1"></EditText>
		<TextView android:id="@+id/lab2" android:text="@string/unit1"
			android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content" android:gravity="center_horizontal"
			android:layout_weight="0.19"></TextView>
	</LinearLayout>
	<TextView android:id="@+id/textView4" android:layout_width="wrap_content"
		android:text="@string/lab2" android:textAppearance="?android:attr/textAppearanceLarge"
		android:layout_height="wrap_content"></TextView>
	<LinearLayout android:layout_width="match_parent"
		android:id="@+id/linearLayout1" android:layout_height="wrap_content">
		<EditText android:id="@+id/isw" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_weight="1"></EditText>
		<TextView android:id="@+id/lab3" android:text="@string/unit1"
			android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content" android:gravity="center_horizontal"
			android:layout_weight="0.19"></TextView>
	</LinearLayout>
	<TextView android:id="@+id/textView5" android:layout_width="wrap_content"
		android:text="@string/lab3" android:textAppearance="?android:attr/textAppearanceLarge"
		android:layout_height="wrap_content"></TextView>
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<EditText android:id="@+id/iw" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_weight="1"></EditText>
		<Button android:text="@string/unit2" android:id="@+id/unit"
			android:layout_height="wrap_content" android:layout_width="wrap_content"
			android:layout_weight="0.14"></Button>
	</LinearLayout>
	<ImageView android:id="@+id/arrow1" android:src="@android:drawable/arrow_down_float"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"></ImageView>
	<Button android:layout_width="match_parent"
		android:layout_height="wrap_content" android:id="@+id/compute"
		android:text="@string/compute"></Button>
	<ImageView android:id="@+id/arrow2" android:src="@android:drawable/arrow_down_float"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"></ImageView>
	<TextView android:layout_height="wrap_content" android:id="@+id/lab5"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:text="@string/lab5" android:layout_width="wrap_content"></TextView>
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:id="@+id/linearLayout2">
		<EditText android:id="@+id/hfov" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_weight="1"></EditText>
		<TextView android:id="@+id/lab6" android:text="@string/unit4"
			android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content" android:gravity="center_horizontal"
			android:layout_weight="0.16"></TextView>
	</LinearLayout>
	<TextView android:id="@+id/lab4" android:layout_width="wrap_content"
		android:text="@string/lab4" android:textAppearance="?android:attr/textAppearanceLarge"
		android:layout_height="wrap_content"></TextView>
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:id="@+id/linearLayout2">
		<EditText android:id="@+id/vdf" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_weight="1"></EditText>
		<TextView android:id="@+id/lab6" android:text="@string/unit3"
			android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content" android:gravity="center_horizontal"
			android:layout_weight="0.25"></TextView>
	</LinearLayout>
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:id="@+id/linearLayout2">
		<EditText android:id="@+id/vdm" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_weight="1"></EditText>
		<TextView android:id="@+id/lab7" android:text="@string/unit2"
			android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content" android:gravity="center_horizontal"
			android:layout_weight="0.20"></TextView>
	</LinearLayout>
</LinearLayout>